# care-guard

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run_monitoring_system.sh
agentic_types/: __init__.py  models.py
autogen/: autogen.py
crew/: README.md  data_integration.py  performance_monitor.py  pyproject.toml  requirements.txt
crew/cardio_monitor/: README.md  pyproject.toml
crew/cardio_monitor/src/cardio_monitor/: crew.py  main.py
crew/cardio_monitor/src/cardio_monitor/config/: agents.yaml  tasks.yaml
crew/cardio_monitor/src/cardio_monitor/tools/: __init__.py  biometric_analysis_tool.py  patient_data_tool.py
crew/knowledge_base_crew/: README.md  knowledge_indexing.md  pyproject.toml  test_opensearch_tool.py
crew/knowledge_base_crew/db/: chroma.sqlite3
crew/knowledge_base_crew/src/knowledge_base_crew/: crew.py  main.py
crew/knowledge_base_crew/src/knowledge_base_crew/config/: agents.yaml  tasks.yaml
crew/knowledge_base_crew/src/knowledge_base_crew/tools/: knowledge_base_indexing.py  opensearch_tool.py
langgraph_agents/: README.md  main.py
langgraph_agents/agents/: heartbeat_classification.py
langgraph_agents/workflows/: heartbeat_workflow.py  patient_monitoring_workflow.py
opensearch/: README.md  docker-compose.yml  document_indexer.py  knowledge_crew_integration.py  rag_agent.py  run_indexing.py
patient/: README.md  agentic_data_loader.py  agentic_monitor_app.py  agentic_monitor_integration.py  agentic_monitor_integration_new.py  biometric_scenario_server.py  biometric_types.py  monitor.py  pulse-server.py
patient/biometric/buffer/: pulse_temp.json
patient/biometric/demo_scenarios/: critical.json  irregular.json  normal.json
patient/biometric/weight/: allen.json  mark.json  zach.json
patient/generated_medical_records/fhir/: Allen322_Hickle134_f420e6d4-55db-974f-05cb-52d06375b65f.json  Columbus656_Reichert620_7107074b-29fb-340d-13e6-d4d736b09dc8.json  Curt84_Robel940_b7516db8-8cce-36ff-f664-ac97a5af99a6.json  Delmer311_Bogisich202_eaad3df1-7b01-9890-7cef-67c66be9a8f3.json  Demetrice140_Vertie683_Fisher429_19bd6ff2-899b-1f2e-910b-13e53edee8b2.json  Elijah719_Medhurst46_8a88ac77-9e85-5086-46c9-5d2145e3919e.json  Fausto876_Franecki195_f8c05073-aef6-8226-8117-ca482e111f72.json  Mark765_Green467_29244161-9d02-b8b6-20cc-350f53ffe7a1.json  (+11 more)
patient/integrations/: README.md  __init__.py  base_integration.py  crewai_integration.py  langgraph_integration.py
patient/monitor_components/: __init__.py  ekg_component.py  heartbeat_component.py  timeline_component.py
patient/utils/: fhir_observations.py  generate_realistic_heartbeats.py  heartbeat_analysis.py
utils/: logging_utils.py
(+8 files in other folders)
