[project]
name = "care-guard-agentic-ai"
version = "0.1.0"
description = "Agentic AI system for patient monitoring and care"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "streamlit>=1.28.0",
    "plotly>=5.15.0",
    "websockets>=11.0",
    "pydantic>=2.0.0",
    "pandas>=1.4.0",
    "numpy>=1.23",
    "python-dotenv>=1.0.0",
    "crewai[tools]>=0.140.0,<1.0.0",
    "opensearch-py>=2.0.0",
    "langgraph>=0.3.0",
    "langchain-core>=0.1.0",
    "requests>=2.32.0",
    "pathlib2>=2.3.7"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0"
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0"
] 
